Centered the canvas... Update this to the boilerplate, too.

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,14 @@
       background-color: rgb(56, 56, 56);
     }
 
+    div.game-wrapper {
+      text-align: center;
+    }
+
     canvas {
       max-width: 100%;
       background-color: black;
+      margin: 0 auto;
     }
 
     .debug-pre {
@@ -41,7 +46,7 @@
 </head>
 
 <body>
-  <canvas></canvas>
+  <div class="game-wrapper"><canvas></canvas></div>
 </body>
 
 </html>
