Instructions and reset keysDown.

--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,33 @@
       font-size: 16px;
       margin-bottom: 10px;
     }
+
+    .instructions {
+      font-family: 'Courier New', Courier, monospace;
+      color: rgba(255, 255, 255, 0.7);
+      width: 80%;
+      margin: 0 auto;
+    }
   </style>
 </head>
 
 <body>
   <div class="game-wrapper"><canvas></canvas></div>
+  <div class="instructions">
+    <h2>Instructions</h2>
+    <p>
+      "Poke" all the green squares. Don't collide with any squares, a hit will make you grow (harder to navigate in
+      tight spots).
+    </p>
+    <ul>
+      <li>
+        Arrow keys to move
+      </li>
+      <li>
+        WASD to poke with arm
+      </li>
+    </ul>
+  </div>
 </body>
 
 </html>
